<resources>
    <string name="app_name">LifeSim</string>
    <string name="mood">Настроение</string>
    <string name="health">Здоровье</string>
    <string name="intellect">Интеллект</string>
    <string name="looks">Внешность</string>
    <string name="age">Age</string>
    <string name="start_game">Начать игру</string>
    <string name="work_on_mp">Work on MP</string>
    <string name="spend_time_with_friends">Spend time with Friends</string>
    <string name="go_to_a_party">Go to a party</string>
    <string name="new_life_header">Новая жизнь</string>
    <string name="enter_name">Имя:</string>
    <string name="enter_last_name">Фамилия:</string>
    <string name="enterGender_male">Мужчина</string>
    <string name="enterGender_female">Женщина</string>
    <string name="enter_gender">Пол:</string>
    <string name="enter_country">Страна:</string>
    <string name="actions">Действия</string>
    <string name="inventory">Инвентарь</string>
    <string name="relationships">Отношения</string>
    <string name="activities">Активности</string>
    <string name="nextYear">Прожить год</string>
    <string name="endGame">Конец</string>
    <string name="startNewGame">Начать новую игру</string>
    <string name="walk">Погулять</string>
    <string name="read_book">Прочитать книгу</string>
    <string name="start_game_button">Начать новую игру</string>
    <string name="load_game_button">Загрузить сохранение</string>
    <string name="version">Версия: 0.1</string>
    <string name="app_logo">Логотип приложения</string>
    <string name="or">или</string>
    <string name="player_avatar">Player avatar</string>
    <string name="country_flag">Country flag</string>
    <string name="player_name">Player name</string>
    <string name="player_status">Player status</string>
    <string name="player_stat_modifiers">Player Stat Modifiers</string>
    <string name="dollar_sign">$</string>
    <string name="player_money">0</string>
    <string name="activity_log">ActivityLog</string>
    <string name="mood_text">Настроение</string>
    <string name="energy_text">Энергия</string>
    <string name="health_text">Здоровье</string>
    <string name="smarts_text">Интеллект</string>
    <string name="looks_text">Внешность</string>
    <string name="status_actions_button">Статус</string>
    <string name="assets_button">Владения</string>
    <string name="next_year_buttom">Год</string>
    <string name="relationships_button">Отношения</string>
    <string name="actions_button">Действия</string>
    <string name="create_new_life_header">Создание нового персонажа</string>
    <string name="input_first_name_field">Имя</string>
    <string name="helper_input_first_name_text">Введите имя</string>
    <string name="input_last_name_field">Фамилия</string>
    <string name="helper_input_last_name_text">Введите фамилию</string>
    <string name="choose_gender_field">Пол:</string>
    <string name="radiobutton_male">Мужчина</string>
    <string name="radiobutton_Female">Женщина</string>
    <string name="country_picker">Страна</string>
    <string name="error_length">Слишком большое число символов</string>
    <string name="error_format">Разрешены только буквы</string>
    <string name="error_empty">Поле не может быть пустым</string>
    <string name="chat_hint">Введите сообщение</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>