<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/playerAvatar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars"
        android:contentDescription="@string/player_avatar" />

    <ImageView
        android:id="@+id/countryFlag"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toEndOf="@+id/playerAvatar"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/alert_dark_frame"
        android:contentDescription="@string/country_flag" />

    <TextView
        android:id="@+id/playerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="14dp"
        android:text="@string/player_name"
        app:layout_constraintStart_toEndOf="@+id/countryFlag"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/playerStatusImage"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:layout_constraintStart_toEndOf="@+id/playerAvatar"
        app:layout_constraintTop_toBottomOf="@+id/countryFlag"
        app:srcCompat="@android:drawable/alert_dark_frame" />

    <TextView
        android:id="@+id/playerStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:text="@string/player_status"
        app:layout_constraintStart_toEndOf="@+id/playerStatusImage"
        app:layout_constraintTop_toBottomOf="@+id/playerName" />

    <ImageView
        android:id="@+id/playerStatModifiers"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:layout_constraintBottom_toTopOf="@+id/activityLog"
        app:layout_constraintStart_toEndOf="@+id/playerAvatar"
        app:layout_constraintTop_toBottomOf="@+id/playerStatusImage"
        app:srcCompat="@android:drawable/alert_dark_frame"
        android:contentDescription="@string/player_stat_modifiers" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:text="@string/player_stat_modifiers"
        app:layout_constraintStart_toEndOf="@+id/playerStatModifiers"
        app:layout_constraintTop_toBottomOf="@+id/playerStatus" />

    <TextView
        android:id="@+id/dollarSign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:text="@string/dollar_sign"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/playerName" />

    <TextView
        android:id="@+id/playerMoney"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        android:text="@string/player_money"
        app:layout_constraintEnd_toStartOf="@+id/dollarSign"
        app:layout_constraintTop_toTopOf="@+id/playerName" />

    <ScrollView
        android:id="@+id/activityLog"
        android:layout_width="413dp"
        android:layout_height="324dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playerAvatar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/activityDisplay"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/activity_log"
                android:textSize="16sp" />

        </LinearLayout>

    </ScrollView>

    <com.mackhartley.roundedprogressbar.RoundedProgressBar
        android:id="@+id/energyBar"
        android:layout_width="243dp"
        android:layout_height="24dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/energyPic"
        app:layout_constraintTop_toBottomOf="@+id/activityLog" />

    <com.mackhartley.roundedprogressbar.RoundedProgressBar
        android:id="@+id/moodBar"
        android:layout_width="243dp"
        android:layout_height="24dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/moodPic"
        app:layout_constraintTop_toBottomOf="@+id/energyBar" />

    <com.mackhartley.roundedprogressbar.RoundedProgressBar
        android:id="@+id/healthBar"
        android:layout_width="243dp"
        android:layout_height="24dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/healthPic"
        app:layout_constraintTop_toBottomOf="@+id/moodBar" />

    <com.mackhartley.roundedprogressbar.RoundedProgressBar
        android:id="@+id/smartsBar"
        android:layout_width="243dp"
        android:layout_height="24dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/smartsPic"
        app:layout_constraintTop_toBottomOf="@+id/healthBar" />

    <com.mackhartley.roundedprogressbar.RoundedProgressBar
        android:id="@+id/looksBar"
        android:layout_width="243dp"
        android:layout_height="24dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/looksPic"
        app:layout_constraintTop_toBottomOf="@+id/smartsBar" />

    <TextView
        android:id="@+id/energyText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/energy_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activityLog" />

    <TextView
        android:id="@+id/moodText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/mood_text"
        app:layout_constraintEnd_toEndOf="@+id/energyText"
        app:layout_constraintTop_toBottomOf="@+id/energyText" />

    <ImageView
        android:id="@+id/energyPic"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="25dp"
        app:layout_constraintStart_toEndOf="@+id/energyText"
        app:layout_constraintTop_toBottomOf="@+id/activityLog"
        app:srcCompat="@drawable/ic_baseline_bolt_24" />

    <ImageView
        android:id="@+id/moodPic"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="@+id/energyPic"
        app:layout_constraintTop_toBottomOf="@+id/energyPic"
        app:srcCompat="@drawable/ic_baseline_mood_24" />

    <TextView
        android:id="@+id/healthText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/health_text"
        app:layout_constraintEnd_toEndOf="@+id/moodText"
        app:layout_constraintTop_toBottomOf="@+id/moodText" />

    <ImageView
        android:id="@+id/healthPic"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="@+id/moodPic"
        app:layout_constraintTop_toBottomOf="@+id/moodPic"
        app:srcCompat="@drawable/ic_baseline_health_24" />

    <TextView
        android:id="@+id/smartsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/smarts_text"
        app:layout_constraintEnd_toEndOf="@+id/healthText"
        app:layout_constraintTop_toBottomOf="@+id/healthText" />

    <ImageView
        android:id="@+id/smartsPic"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="@+id/healthPic"
        app:layout_constraintTop_toBottomOf="@+id/healthPic"
        app:srcCompat="@drawable/ic_baseline_smarts_24" />

    <TextView
        android:id="@+id/looksText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/looks_text"
        app:layout_constraintEnd_toEndOf="@+id/smartsText"
        app:layout_constraintTop_toBottomOf="@+id/smartsText" />

    <ImageView
        android:id="@+id/looksPic"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="@+id/smartsPic"
        app:layout_constraintTop_toBottomOf="@+id/smartsPic"
        app:srcCompat="@drawable/ic_baseline_looks_24" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialButton2"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="25dp"
        android:backgroundTint="#5E5EAD"
        android:text="@string/status_actions_button"
        android:textSize="6sp"
        app:icon="@drawable/ic_baseline_account_circle_36"
        app:iconGravity="top"
        app:iconTint="#ff0000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/looksText" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialButton"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:backgroundTint="#5E5EAD"
        android:text="@string/assets_button"
        android:textSize="6sp"
        app:icon="@drawable/ic_baseline_business_center_36"
        app:iconGravity="top"
        app:iconTint="#D4713B"
        app:layout_constraintStart_toEndOf="@+id/materialButton2"
        app:layout_constraintTop_toTopOf="@+id/materialButton2" />

    <com.google.android.material.button.MaterialButton
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:iconSize="48dp"
        android:backgroundTint="#18B500"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        android:padding="0dp"
        android:textSize="12sp"
        app:icon="@drawable/ic_baseline_play_arrow_36"
        app:iconGravity="textStart"
        app:iconPadding="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/materialButton2"
        app:layout_constraintTop_toBottomOf="@+id/looksBar"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.Button.Circle" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialButton4"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:backgroundTint="#5E5EAD"
        android:text="@string/relationships_button"
        android:textSize="6sp"
        app:icon="@drawable/ic_baseline_people_36"
        app:iconGravity="top"
        app:iconTint="#A44D70"
        app:layout_constraintEnd_toStartOf="@+id/materialButton3"
        app:layout_constraintTop_toTopOf="@+id/materialButton" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialButton3"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:backgroundTint="#5E5EAD"
        android:text="@string/actions_button"
        android:textSize="6sp"
        app:icon="@drawable/ic_baseline_list_alt_36"
        app:iconGravity="top"
        app:iconTint="#4D93A4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/materialButton4" />


</androidx.constraintlayout.widget.ConstraintLayout>