<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/newLifeHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/create_new_life_header"
        android:textAllCaps="true"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/newLifeFlower1"
        app:layout_constraintEnd_toStartOf="@+id/newLifeFlower2"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toEndOf="@+id/newLifeFlower1"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/newLifeFlower1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_create_new_life_icon_36" />

    <ImageView
        android:id="@+id/newLifeFlower2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_create_new_life_icon_36" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputFirstNameField"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="295dp"
        android:layout_height="84dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        app:counterEnabled="true"
        app:counterMaxLength="10"
        app:endIconMode="clear_text"
        app:errorEnabled="true"
        app:helperText="@string/helper_input_first_name_text"
        app:helperTextEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newLifeHeader"
        app:startIconDrawable="@drawable/ic_baseline_input_name_36">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputFirstNameFieldEditText"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:inputType="text"
            tools:layout_editor_absoluteX="50dp"
            tools:layout_editor_absoluteY="122dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLastNameField"
        android:layout_width="295dp"
        android:layout_height="84dp"
        app:errorEnabled="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        app:counterEnabled="true"
        app:counterMaxLength="10"
        app:endIconMode="clear_text"
        app:helperText="@string/helper_input_last_name_text"
        app:helperTextEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintTop_toBottomOf="@+id/inputFirstNameField"
        app:startIconDrawable="@drawable/ic_baseline_input_name_36">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputLastNameFieldEditText"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            tools:layout_editor_absoluteX="50dp"
            tools:layout_editor_absoluteY="122dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/chooseGenderField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/choose_gender_field"
        app:layout_constraintStart_toStartOf="@+id/inputLastNameField"
        app:layout_constraintTop_toBottomOf="@+id/inputLastNameField" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="211dp"
        android:layout_height="95dp"
        app:layout_constraintStart_toStartOf="@+id/chooseGenderField"
        app:layout_constraintTop_toBottomOf="@+id/chooseGenderField">

        <RadioButton
            android:id="@+id/radioButtonMale"
            android:layout_width="match_parent"
            android:checked="true"
            android:layout_height="wrap_content"
            android:text="@string/radiobutton_male" />

        <RadioButton
            android:id="@+id/radioButtonFemale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radiobutton_Female" />
    </RadioGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="288dp"
        android:layout_height="68dp"
        android:layout_marginTop="20dp"
        android:hint="@string/country_picker"
        app:layout_constraintEnd_toEndOf="@+id/inputLastNameField"
        app:layout_constraintStart_toStartOf="@+id/radioGroup"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:startIconDrawable="@drawable/ic_baseline_pick_country_36">

        <AutoCompleteTextView
            android:id="@+id/spinnerCountryTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:inputType="none"
            tools:text="Россия" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/start_game_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button_shape"
        android:text="@string/start_game_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/randomizeFirstName"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        app:icon="@drawable/ic_baseline_sync_36"
        app:iconGravity="textTop"
        app:iconPadding="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/inputFirstNameField"
        app:layout_constraintTop_toTopOf="@+id/inputFirstNameField" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/randomizeLastName"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        app:icon="@drawable/ic_baseline_sync_36"
        app:iconGravity="textTop"
        app:iconPadding="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/inputLastNameField"
        app:layout_constraintTop_toTopOf="@+id/inputLastNameField" />


</androidx.constraintlayout.widget.ConstraintLayout>